<resources>
    <string name="app_name">AirportApplication</string>
    <string name="action_settings">Settings</string>

    <!--首页-->
    <string name="work_order">工单</string>
    <string name="mine">我的</string>
    <!--登陆页面-->
    <string name="login">登&#160;陆</string>

    <string name="username">用户名:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>

    <string name="regain_password">忘记密码</string>
    <string name="server">服务器:</string>
    <string name="account_set">账&#160;&#160;&#160;&#160;套:</string>
    <!--工单页面-->
    <string name="company">航空公司</string>
    <string name="on_plan">计划工单</string>
    <string name="not_on_plan">非计划工单</string>
    <string name="all_plan">全部工单</string>
    <string name="order_num">工单编号:</string>
    <string name="order_content">工单内容:</string>
    <!--个人中心-->
    <string name="done">我的申请</string>
    <string name="not_done">未提交工单</string>
    <string name="notification">通知</string>
    <string name="fault_list">故障清单</string>
    <string name="my_fault_list">我的故障</string>
    <string name="logout">退出登录</string>
    <string name="my_center">个人中心</string>
    <string name="clear">清空</string>
    <!--照相dialog-->
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="cancle">取消</string>
    <!--相册-->
    <string name="more">更多</string>
    <string name="preview">预览</string>
    <!--工单详情-->
    <string name="details">工单详情</string>
    <string name="tips">备注:</string>
    <string name="device_details">设备详情</string>
    <string name="select_all">全选</string>
    <string name="next_step">完成</string>
    <string name="save">保存</string>
    <string name="save_and_post">保存并提交</string>
    <string name="confirm_and_post">确认提交</string>
    <string name="rec_name">检查人员:</string>
    <string name="confirm_order">确认工单</string>
    <!--添加备注-->
    <string name="add_remark">故障详情</string>
    <string name="finish">提交</string>
    <string name="uploading">图片上传中</string>
    <string name="start_time">开始日期:</string>
    <string name="end_time">结束日期:</string>
    <string name="plan_due">计划工期:</string>
    <string name="actual_due">实际工期:</string>
    <string name="code">工单编号:</string>
    <string name="work_content">工作详情:</string>
    <string name="work_description">处理结果:</string>
    <string name="on_fail">上传失败</string>
    <string name="work_result">处理结果</string>
    <string name="airport_select">机位:</string>
    <!--设备详情-->
    <string name="device_name">设备名称:</string>
    <string name="device_spec">设备规格:</string>
    <string name="device_code">编号:</string>
    <string name="fault">添加描述</string>
    <string name="device_content">检查内容:</string>
    <string name="fault_detail">作业详情:</string>

    <string name="warning">工单被提交后，将无法再次修改。\n 完成所有检查后再提交，未完成选择保存即可</string>
    <string name="hint">请输入</string>
    <!--工单类型-->
    <string name="all">全部</string>
    <string name="day">日检</string>
    <string name="week">周检</string>
    <string name="season">季检</string>
    <!--错误详情-->
    <string name="my_fault">故障列表</string>
    <string name="fault_device">设备信息:</string>
    <string name="fault_key">故障描述:</string>
    <string name="fault_content">故障详情:</string>
    <string name="fault_apply">申报状态:</string>
    <string name="fault_time">录入时间:</string>
    <string name="fault_schedule">计划工期:</string>
    <string name="rewrite">申报</string>
    <string name="my_apply">我的申请</string>

    <string name="no_result">没有新的通知</string>
</resources>

