<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWheat">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/confirm_order"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />



            <ImageView
                android:id="@+id/order_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/back" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:background="@color/light_blue"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:singleLine="true"
                android:text="@string/code"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/confirm_order_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:singleLine="true"
                android:textSize="16sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/start_time" />

            <TextView
                android:id="@+id/confrim_order_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/plan_due" />

            <TextView
                android:id="@+id/confrim_order_plan_due"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/end_time" />

                <TextView
                    android:id="@+id/confrim_order_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:singleLine="true" />
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:padding="10dp"
                android:text="@string/actual_due" />

            <TextView
                android:id="@+id/confrim_order_actual_due"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center_vertical"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/rec_name" />
            <TextView
                android:id="@+id/confrim_order_rec_man"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start|center_vertical"
                android:padding="10dp"
                android:singleLine="true" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:id="@+id/add_rec_man"
                android:src="@drawable/add_img"/>
        </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/warning"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="12sp"
        android:background="@color/colorWhite"/>

    </LinearLayout>
    <TextView
        android:id="@+id/up_load_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/theme_blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/confirm_and_post"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>